Add add, remove and toggleRead function

--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+:root{
+    font-family: monospace;
+}
+
 form {
     position:absolute;
     left: 10vw;
     width: 80vw;
+    background-color: black;
+    color: white;
 }
 
 .opForm {
@@ -12,4 +18,16 @@ form {
 
 .hidden {
     visibility: collapse;
+}
+
+main {
+    display: grid;
+    justify-content: center;
+    gap: 10px;
+}
+
+.book {
+    background-color: black;
+    color: white;
+    width: 80vw;
 }
